--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -97,7 +97,9 @@ WIP
 
 ---
 
-### 개인 홈페이지 운영 (https://myeongjae.kim)
+### 개인 홈페이지 운영
+
+https://myeongjae.kim
 
 #### 기간
 
@@ -174,22 +176,22 @@ https://www.sandmanmedia.com
 
 #### 성과
 
-CEO에게 추천서를 받고 Fast learner라고 인정을 받았습니다. [추천서보기](notes/images/김명재_추천서_Sandeep_Reference_Letter.pdf)
+CEO에게 추천서를 받고 Fast learner라고 인정을 받았습니다. <a href="/notes/images/김명재_추천서_Sandeep_Reference_Letter.pdf" target="_blank">추천서보기</a>
 
 ---
 
 
 ## 기고
 
-- [(2023.04.17) [디어코퍼레이션 기술블로그] # 모든 IT 스타트업에서 꼭 작성해야 하는 프론트엔드 단위 테스트가 있다? (로깅, 단위 테스트, 그리고 의존성 주입)](https://blog.deering.co/frontend-unit-test-you-must-write/) 
-- [(2022.11.15) [디어코퍼레이션 기술블로그] 스타트업 개발 생산성 높이기: (2) 숨어있는 비용을 찾아 없애자](https://blog.deering.co/cost-reducing/)
-- [(2022.11.15) [디어코퍼레이션 기술블로그] 스타트업 개발 생산성 높이기 (1): Shape Up](https://blog.deering.co/shape-up/)
-- [(2022.04.30) [디어코퍼레이션 기술블로그] git branch 이름과 hook으로 commit message 컨벤션 강제하기](https://blog.deering.co/commit-convention/)
-- [(2022.05.18) [디어코퍼레이션 기술블로그] 개발자의 일이관지一以貫之](https://blog.deering.co/abstract-engineering/)
-- [(2022.04.05) [유튜브] '우아한형제들 구성원들의 책 추천!' 영상 제작에 참여](https://youtu.be/J1lkYT0g2bM?t=74)
+- [(2023.04.17) 모든 IT 스타트업에서 꼭 작성해야 하는 프론트엔드 단위 테스트가 있다? (로깅, 단위 테스트, 그리고 의존성 주입) - 디어코퍼레이션 기술블로그](https://blog.deering.co/frontend-unit-test-you-must-write/) 
+- [(2022.11.15) 스타트업 개발 생산성 높이기: (2) 숨어있는 비용을 찾아 없애자 - 디어코퍼레이션 기술블로그](https://blog.deering.co/cost-reducing/)
+- [(2022.11.15) 스타트업 개발 생산성 높이기 (1): Shape Up - 디어코퍼레이션 기술블로그](https://blog.deering.co/shape-up/)
+- [(2022.04.30) git branch 이름과 hook으로 commit message 컨벤션 강제하기 - 디어코퍼레이션 기술블로그](https://blog.deering.co/commit-convention/)
+- [(2022.05.18) 개발자의 일이관지一以貫之 - 디어코퍼레이션 기술블로그](https://blog.deering.co/abstract-engineering/)
+- [(2022.04.05) '우아한형제들 구성원들의 책 추천!' 영상 제작에 참여 - 우아한형제들 유튜브](https://youtu.be/J1lkYT0g2bM?t=74)
 - [(2020.11.04) AWS DNA 1기 수상 및 인터뷰 진행](http://blog.creation.net/channy-cloud-clinic-ep23)
-- [(2019.06.12) [우아한형제들 기술블로그] Spring Boot에서 Repository로 DynamoDB 조작하기 (2) – Gradle을 활용해 실행 & 테스팅 환경 구축](https://techblog.woowahan.com/2634/)
-- [(2019.06.05) [우아한형제들 기술블로그] Spring Boot에서 Repository로 DynamoDB 조작하기 (1) – 설정부터 실행까지](https://techblog.woowahan.com/2633/)
+- [(2019.06.12) Spring Boot에서 Repository로 DynamoDB 조작하기 (2) – Gradle을 활용해 실행 & 테스팅 환경 구축 - 우아한형제들 기술블로그](https://techblog.woowahan.com/2634/)
+- [(2019.06.05) Spring Boot에서 Repository로 DynamoDB 조작하기 (1) – 설정부터 실행까지 - 우아한형제들 기술블로그](https://techblog.woowahan.com/2633/)
 
 ## 자격증
 
