--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -176,7 +176,7 @@ https://www.sandmanmedia.com
 
 #### 성과
 
-CEO에게 추천서를 받고 Fast learner라고 인정을 받았습니다. <a href="/notes/images/김명재_추천서_Sandeep_Reference_Letter.pdf" target="_blank">추천서보기</a>
+CEO에게 추천서를 받고 Fast learner라고 인정을 받았습니다. [추천서보기](https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf)
 
 ---
 
