--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -30,7 +30,6 @@ WIP
 
 - 어드민 프론트엔드 DX(Developer Experience) 개선 (3일 소요)
 	- Spring Boot로 만든 백엔드 서버에서 static하게 웹 프론트엔드도 함께 제공하고 있었음
-		- 풀스택 개발자가 간단한 프론트엔드 SPA를 백엔드에 붙여서 사용하기엔 정말 좋은 구조였지만, 어드민 기능이 점점 복잡해지고 프론트엔드 전담 개발자도 합류하게 되면서 상황이 변함.
 	- 프론트엔드 개발자의 DX 향상을 위해서 프론트엔드를 전사 웹 모노레포로 옮김.
 		- 백엔드 개발자도 개발 과정에서 프론트엔드를 빌드하는 과정이 사라졌으므로 작업속도가 향상됨
 	- 프론트엔드를 백엔드에서 떼어내는 과정에서 Google OAuth2, CORS 관련 작업을 수행함.
@@ -137,7 +136,7 @@ AWS VPC, AWS EC2, AWS ECS, Vuejs, Go, React, Next.js, TypeORM, InversifyJS, Spri
 
 C++로 작성한 프로그램에서는 A서버의 데이터를 받아와 B,C 서버가 요구하는 포맷의 csv데이터를 생성합니다. 데이터 생성이 완료되면 expect용 스크립트를 생성하고 실행합니다. expect 스크립트에서는 sftp로 csv파일을 B,C 서버에 전송합니다.
 
-아래는 expect 스크립트의 템플릿입니다. {{ examples }} 부분이 실제 값으로 교체됩니다.
+아래는 expect 스크립트의 템플릿입니다. `{{ examples }}` 부분이 실제 값으로 교체됩니다.
 
 ```
 #!/usr/bin/expect
@@ -180,14 +179,13 @@ CEO에게 추천서를 받고 Fast learner라고 인정을 받았습니다. [추
 
 ---
 
-
 ## 기고
 
 - [(2023.04.17) 모든 IT 스타트업에서 꼭 작성해야 하는 프론트엔드 단위 테스트가 있다? (로깅, 단위 테스트, 그리고 의존성 주입) - 디어코퍼레이션 기술블로그](https://blog.deering.co/frontend-unit-test-you-must-write/) 
 - [(2022.11.15) 스타트업 개발 생산성 높이기: (2) 숨어있는 비용을 찾아 없애자 - 디어코퍼레이션 기술블로그](https://blog.deering.co/cost-reducing/)
 - [(2022.11.15) 스타트업 개발 생산성 높이기 (1): Shape Up - 디어코퍼레이션 기술블로그](https://blog.deering.co/shape-up/)
-- [(2022.04.30) git branch 이름과 hook으로 commit message 컨벤션 강제하기 - 디어코퍼레이션 기술블로그](https://blog.deering.co/commit-convention/)
 - [(2022.05.18) 개발자의 일이관지一以貫之 - 디어코퍼레이션 기술블로그](https://blog.deering.co/abstract-engineering/)
+- [(2022.04.30) git branch 이름과 hook으로 commit message 컨벤션 강제하기 - 디어코퍼레이션 기술블로그](https://blog.deering.co/commit-convention/)
 - [(2022.04.05) '우아한형제들 구성원들의 책 추천!' 영상 제작에 참여 - 우아한형제들 유튜브](https://youtu.be/J1lkYT0g2bM?t=74)
 - [(2020.11.04) AWS DNA 1기 수상 및 인터뷰 진행](http://blog.creation.net/channy-cloud-clinic-ep23)
 - [(2019.06.12) Spring Boot에서 Repository로 DynamoDB 조작하기 (2) – Gradle을 활용해 실행 & 테스팅 환경 구축 - 우아한형제들 기술블로그](https://techblog.woowahan.com/2634/)
