--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -28,12 +28,12 @@ WIP
 
 ##### 모빌리티서비스팀 풀스택 개발자 (2023.05.01 ~ 현재)
 
-- 어드민 프론트엔드 DX(Developer Experience) 개선 (3일 소요)
-	- Spring Boot로 만든 백엔드 서버에서 static하게 웹 프론트엔드도 함께 제공하고 있었음
-	- 프론트엔드 개발자의 DX 향상을 위해서 프론트엔드를 전사 웹 모노레포로 옮김.
-		- 백엔드 개발자도 개발 과정에서 프론트엔드를 빌드하는 과정이 사라졌으므로 작업속도가 향상됨
-	- 프론트엔드를 백엔드에서 떼어내는 과정에서 Google OAuth2, CORS 관련 작업을 수행함.
-		- 학습을 위해 예시프로젝트 작성: https://github.com/myeongjae-kim/oauth-example
+어드민 프론트엔드 DX(Developer Experience) 개선 (3일 소요)
+
+- Spring Boot로 만든 백엔드 서버에서 static하게 웹 프론트엔드도 함께 제공하고 있었음
+- 프론트엔드 개발자의 DX 향상을 위해서 프론트엔드를 전사 웹 모노레포로 옮김. (백엔드 개발자도 개발 과정에서 프론트엔드를 빌드하는 과정이 사라졌으므로 작업속도 향상)
+- 프론트엔드를 백엔드에서 떼어내는 과정에서 Google OAuth2, CORS 관련 작업을 수행함.
+	- 학습을 위해 예시프로젝트 작성: https://github.com/myeongjae-kim/oauth-example
 
 ##### 물류팀 테크리드 (2022.06.01 ~ 2023.04.30)
 
@@ -45,7 +45,7 @@ WIP
 - 백엔드 API의 모든 기능에 대한 테스트 작성
 - 배치 성격의 프로그램을 [serverless framework](https://www.serverless.com/)로 작성
 	- serverless, AWS Lambda, EventBridge
-- 화물 플랫폼들의 API를 분석하고 복호화 알고리즘과 암호키 추출
+- 화물 플랫폼들의 API를 분석하고 종단간 암호화 알고리즘과 암호키 추출
 - OLAP(Online Analytical Process) 워크로드를 감당할 수 있는 시스템 도입
 	- AWS Athena, Apache Zeppelin
 - pnpm workspace를 활용해서 전사 프론트엔드 모노레포 도입 (10개 이상의 웹앱을 모노레포에서 관리)
