--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -8,10 +8,6 @@ WIP
 
 ## 이력
 
-WIP
-
----
-
 ### 디어코퍼레이션
 
 #### 기간
@@ -28,12 +24,11 @@ WIP
 
 ##### 모빌리티서비스팀 풀스택 개발자 (2023.05.01 ~ 현재)
 
-어드민 프론트엔드 DX(Developer Experience) 개선 (3일 소요)
-
-- Spring Boot로 만든 백엔드 서버에서 static하게 웹 프론트엔드도 함께 제공하고 있었음
-- 프론트엔드 개발자의 DX 향상을 위해서 프론트엔드를 전사 웹 모노레포로 옮김. (백엔드 개발자도 개발 과정에서 프론트엔드를 빌드하는 과정이 사라졌으므로 작업속도 향상)
-- 프론트엔드를 백엔드에서 떼어내는 과정에서 Google OAuth2, CORS 관련 작업을 수행함.
-	- 학습을 위해 예시프로젝트 작성: https://github.com/myeongjae-kim/oauth-example
+- 디어 앱 CI/CD 파이프라인 구축
+- 디어 앱 개발 과정에 TDD(Test Driven Development) 도입
+- 동종업계 S사 API의 종단 암호화 알고리즘과 암호키 추출
+- 전사 VPN 셋업 및 구글 로그인 연동
+- 쿼리를 공유할 수 있는 도구인 [Apache Zeppelin](https://zeppelin.apache.org/)을 도입해서 디어 데이터 분석 인프라를 마련함
 
 ##### 물류팀 테크리드 (2022.06.01 ~ 2023.04.30)
 
@@ -91,8 +86,8 @@ WIP
 
 #### 성과
 
+- **3년만에 T1에서 T3직급까지 두 번 승진**
 - 만화경 웹툰 플랫폼의 비즈니스 요구사항을 만족하는 백엔드 API와 백오피스 CMS 프론트엔드 구현
-- 3년만에 T1에서 T3직급까지 두 번 승진
 
 ---
 
