--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -26,7 +26,7 @@ WIP
 
 - 디어 앱 CI/CD 파이프라인 구축
 - 디어 앱 개발 과정에 TDD(Test Driven Development) 도입
-- 동종업계 S사 API의 종단 암호화 알고리즘과 암호키 추출
+- 동종업계 S사 API의 종단간 암호화 알고리즘과 암호키 추출
 - 전사 VPN 셋업 및 구글 로그인 연동
 - 쿼리를 공유할 수 있는 도구인 [Apache Zeppelin](https://zeppelin.apache.org/)을 도입해서 디어 데이터 분석 인프라를 마련함
 
