--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -30,6 +30,9 @@ WIP
 - 동종업계 S사 API의 종단간 암호화 알고리즘과 암호키 추출
 - 전사 VPN 셋업 및 구글 로그인 연동
 - 쿼리를 공유할 수 있는 도구인 [Apache Zeppelin](https://zeppelin.apache.org/)을 도입해서 디어 데이터 분석 인프라를 마련함
+- Next.js v13의 [App Router](https://nextjs.org/docs/app)로 웹 애플리케이션을 작성하면서 필요한 라이브러리를 직접 구현
+	- [⛓️return-fetch :: A simple and powerful high order function to extend fetch](https://return-fetch.myeongjae.kim/)
+	- [Next.js v13 App Router로 제품 만들기: 이제 더 이상 Axios를 쓰지 않기로 했습니다](https://myeongjae.kim/blog/2023/08/04/next-js-app-router-and-fetch-library)
 
 ##### 물류팀 테크리드 (2022.06.01 ~ 2023.04.30)
 
@@ -102,7 +105,7 @@ https://myeongjae.kim
 
 #### 목적
 
-학습용 프로젝트입니다. 기술적으로 관심이 가는 기술을 현업에 적용해보기 전에 실험해보는 테스트베드가 주요 용도이며, 평소에 드는 생각이나 회사 기술블로그에 기고한 글을 아카이빙하는 목적으로도 운영하고 있습니다.
+학습용 프로젝트. 기술적으로 관심이 가는 기술을 현업에 적용해보기 전에 실험해보는 테스트베드가 주요 용도이며, 평소에 드는 생각이나 회사 기술블로그에 기고한 글을 아카이빙하는 목적으로도 운영중.
 
 #### 학습했던 기술
 
@@ -122,15 +125,15 @@ AWS VPC, AWS EC2, AWS ECS, Vuejs, Go, React, Next.js, TypeORM, InversifyJS, Spri
 
 #### 기여한 기술력
 
-[UT Austin 간호대학](https://nursing.utexas.edu)에서 사용하던 프로그램이 유지보수가 되고있지 않던 상황에서, 기존의 소스코드를 받아 프로그램이 제대로 작동하도록 구현을 마무리 했습니다.
+[UT Austin 간호대학](https://nursing.utexas.edu)에서 사용하던 프로그램이 유지보수가 되고있지 않던 상황에서, 기존의 소스코드를 받아 프로그램이 제대로 작동하도록 구현을 마무리 했다.
 
-프로그램은 A서버에서 환자의 기록을 받아와 B,C 서버로 보냅니다. A서버에서 받은 문자열 데이터를 B,C서버가 요구하는 포맷에 맞게 처리하고 전송합니다.
+프로그램은 A서버에서 환자의 기록을 받아와 B,C 서버로 보낸다. A서버에서 받은 문자열 데이터를 B,C서버가 요구하는 포맷에 맞게 처리하고 전송한다.
 
-프로젝트를 넘겨받았을 때는 전임자가 프로그램을 설계하고 curl library를 활용하는 클래스까지만 구현한 상태였습니다. 설계 문서를 보고 A서버에 request를 보내서 데이터를 받아오는 부분, 받아온 문자열 데이터를 처리하는 부분, 받은 데이터를 B,C서버로 전송하는 부분을 구현했습니다.
+프로젝트를 넘겨받았을 때는 전임자가 프로그램을 설계하고 curl library를 활용하는 클래스까지만 구현한 상태였다. 설계 문서를 보고 A서버에 request를 보내서 데이터를 받아오는 부분, 받아온 문자열 데이터를 처리하는 부분, 받은 데이터를 B,C서버로 전송하는 부분을 구현했다.
 
-C++로 작성한 프로그램에서는 A서버의 데이터를 받아와 B,C 서버가 요구하는 포맷의 csv데이터를 생성합니다. 데이터 생성이 완료되면 expect용 스크립트를 생성하고 실행합니다. expect 스크립트에서는 sftp로 csv파일을 B,C 서버에 전송합니다.
+C++로 작성한 프로그램에서는 A서버의 데이터를 받아와 B,C 서버가 요구하는 포맷의 csv데이터를 생성한다. 데이터 생성이 완료되면 expect용 스크립트를 생성하고 실행한다. expect 스크립트에서는 sftp로 csv파일을 B,C 서버에 전송한다.
 
-아래는 expect 스크립트의 템플릿입니다. `{{ examples }}` 부분이 실제 값으로 교체됩니다.
+아래는 expect 스크립트의 템플릿이다. `{{ examples }}` 부분을 실제 값으로 교체한다.
 
 ```
 #!/usr/bin/expect
@@ -149,10 +152,10 @@ interact
 
 #### 성과
 
-- 목표했던 프로그램을 완성했습니다.
-- libcurl 라이브러리의 활용법을 배웠습니다.
-- expect를 통해 CLI 상호작용을 자동화하는 법을 배웠습니다.
-- crontab을 활용해서 프로세스를 정해진 시간에 자동으로 실행하는 법을 배웠습니다.
+- 목표했던 프로그램을 완성.
+- libcurl 라이브러리의 활용법 학습.
+- expect를 통해 CLI 상호작용을 자동화하는 방법 학습.
+- crontab을 활용해서 프로세스를 정해진 시간에 자동으로 실행하는 방법 학습.
 
 ---
 
@@ -169,12 +172,14 @@ https://www.sandmanmedia.com
 
 #### 성과
 
-CEO에게 추천서를 받고 Fast learner라고 인정을 받았습니다. [추천서보기](https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf)
+CEO에게 추천서를 받고 Fast learner라고 인정을 받음. [추천서보기](https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf)
+
+<embed src="https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf" width='100%' height='80vh'>
 
 ---
 
 ## 기고
-
+- [(2023.08.09) Next.js App Router로 제품 만들기: 이제 더 이상 Axios를 쓰지 않기로 했습니다 - 디어코퍼레이션 기술블로그](https://blog.deering.co/next-js-app-router-and-fetch-library/)
 - [(2023.04.17) 모든 IT 스타트업에서 꼭 작성해야 하는 프론트엔드 단위 테스트가 있다? (로깅, 단위 테스트, 그리고 의존성 주입) - 디어코퍼레이션 기술블로그](https://blog.deering.co/frontend-unit-test-you-must-write/) 
 - [(2022.11.15) 스타트업 개발 생산성 높이기: (2) 숨어있는 비용을 찾아 없애자 - 디어코퍼레이션 기술블로그](https://blog.deering.co/cost-reducing/)
 - [(2022.11.15) 스타트업 개발 생산성 높이기 (1): Shape Up - 디어코퍼레이션 기술블로그](https://blog.deering.co/shape-up/)
