--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -174,7 +174,7 @@ https://www.sandmanmedia.com
 
 CEO에게 추천서를 받고 Fast learner라고 인정을 받음. [추천서보기](https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf)
 
-<embed src="https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf" width='100%' height='80vh'>
+<embed src="https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf" style="width: 100%; height: 80vh;">
 
 ---
 
