--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -2,9 +2,28 @@
 title: "4. 이력서"
 ---
 
+안녕하세요, 김명재입니다.
+
+<table style="border: 0; margin-bottom: 4rem;">
+  <tbody>
+    <tr>
+      <td style="border: 0;">
+        <ul>Email: <a href="mailto:dev@myeongjae.kim">dev@myeongjae.kim</a></ul>
+        <ul>Phone: 010-0000-0000</ul>
+        <ul>Blog: <a href="https://myeongjae.kim">https://myeongjae.kim</a></ul>
+      </td>
+      <td style="border: 0;">
+        <img src="https://cdn.myeongjae.kim/res/profile.jpg" width="256">
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 ## 저는
 
-WIP
+- 담당하는 시스템이 최소한의 복잡도를 갖도록 일합니다: [https://myeongjae.kim/blog/2020/02/05/single-principle-of-a-developer](https://myeongjae.kim/blog/2020/02/05/single-principle-of-a-developer)
+	- 엔지니어링의 고통은 복잡함 때문에 발생하기 때문입니다.
+	- 고통의 총량을 줄이는 것이 평생의 목표입니다.
 
 ## 이력
 
@@ -31,7 +50,7 @@ WIP
 - 전사 VPN 셋업 및 구글 로그인 연동
 - 쿼리를 공유할 수 있는 도구인 [Apache Zeppelin](https://zeppelin.apache.org/)을 도입해서 디어 데이터 분석 인프라를 마련함
 - Next.js v13의 [App Router](https://nextjs.org/docs/app)로 웹 애플리케이션을 작성하면서 필요한 라이브러리를 직접 구현
-	- [⛓️return-fetch :: A simple and powerful high order function to extend fetch](https://return-fetch.myeongjae.kim/)
+	- [return-fetch :: A simple and powerful high order function to extend fetch](https://return-fetch.myeongjae.kim/)
 	- [Next.js v13 App Router로 제품 만들기: 이제 더 이상 Axios를 쓰지 않기로 했습니다](https://myeongjae.kim/blog/2023/08/04/next-js-app-router-and-fetch-library)
 
 ##### 물류팀 테크리드 (2022.06.01 ~ 2023.04.30)
@@ -55,7 +74,7 @@ WIP
 
 - 리액트 네이티브 모노레포 템플릿 작성 (yarn workspace를 활용해서)
 - Bitrise를 도입해서 앱 CI/CD를 구성
-- Trunk Based Development 문화 도입
+- Trunk Based Development 문화
 
 
 ---
@@ -132,24 +151,6 @@ AWS VPC, AWS EC2, AWS ECS, Vuejs, Go, React, Next.js, TypeORM, InversifyJS, Spri
 프로젝트를 넘겨받았을 때는 전임자가 프로그램을 설계하고 curl library를 활용하는 클래스까지만 구현한 상태였다. 설계 문서를 보고 A서버에 request를 보내서 데이터를 받아오는 부분, 받아온 문자열 데이터를 처리하는 부분, 받은 데이터를 B,C서버로 전송하는 부분을 구현했다.
 
 C++로 작성한 프로그램에서는 A서버의 데이터를 받아와 B,C 서버가 요구하는 포맷의 csv데이터를 생성한다. 데이터 생성이 완료되면 expect용 스크립트를 생성하고 실행한다. expect 스크립트에서는 sftp로 csv파일을 B,C 서버에 전송한다.
-
-아래는 expect 스크립트의 템플릿이다. `{{ examples }}` 부분을 실제 값으로 교체한다.
-
-```
-#!/usr/bin/expect
-
-spawn sftp -i {{ Alere_HK_File }} -c aes128-cbc {{ Alere_User }}@{{ Alere_Host }}
-expect "Enter password: "
-send "{{ Alere_Pass }}\\\\n"
-expect "sftp>"
-send "cd {{ Alere_Path }}\\\\n"
-expect "sftp>"
-send "put {{ Alere_File }}\\\\n"
-expect "sftp>"
-send "exit\\\\n"
-interact
-```
-
 #### 성과
 
 - 목표했던 프로그램을 완성.
@@ -172,7 +173,9 @@ https://www.sandmanmedia.com
 
 #### 성과
 
-CEO에게 추천서를 받고 Fast learner라고 인정을 받음. [추천서보기](https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf)
+CEO에게 추천서를 받고 Fast learner라고 인정을 받음.
+
+[https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf](https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf)
 
 <embed src="https://cdn.myeongjae.kim/blog/2023/05/김명재_추천서_Sandeep_Reference_Letter.pdf" style="width: 100%; height: 80vh;">
 
