--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -22,7 +22,7 @@ title: "4. 이력서"
 ## 저는
 
 - 담당하는 시스템이 최소한의 복잡도를 갖도록 일합니다: [https://myeongjae.kim/blog/2020/02/05/single-principle-of-a-developer](https://myeongjae.kim/blog/2020/02/05/single-principle-of-a-developer)
-	- 엔지니어링의 고통은 복잡함 때문에 발생하기 때문입니다.
+	- 엔지니어링의 고통은 복잡함에서 발생하기 때문입니다.
 	- 고통의 총량을 줄이는 것이 평생의 목표입니다.
 
 ## 이력
@@ -182,7 +182,7 @@ CEO에게 추천서를 받고 Fast learner라고 인정을 받음.
 ---
 
 ## 기고
-- [(2023.08.09) Next.js App Router로 제품 만들기: 이제 더 이상 Axios를 쓰지 않기로 했습니다 - 디어코퍼레이션 기술블로그](https://blog.deering.co/next-js-app-router-and-fetch-library/)
+- [(2023.08.09) Next.js App Router로 제품 만들기: 이제 더 이상 Axios를 쓰지 않기로 했습니다 - 디어코퍼레이션 기술블로그](https://blog.deering.co/next-js-app-router-and-fetch-library/)
 - [(2023.04.17) 모든 IT 스타트업에서 꼭 작성해야 하는 프론트엔드 단위 테스트가 있다? (로깅, 단위 테스트, 그리고 의존성 주입) - 디어코퍼레이션 기술블로그](https://blog.deering.co/frontend-unit-test-you-must-write/) 
 - [(2022.11.15) 스타트업 개발 생산성 높이기: (2) 숨어있는 비용을 찾아 없애자 - 디어코퍼레이션 기술블로그](https://blog.deering.co/cost-reducing/)
 - [(2022.11.15) 스타트업 개발 생산성 높이기 (1): Shape Up - 디어코퍼레이션 기술블로그](https://blog.deering.co/shape-up/)
