--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -38,7 +38,7 @@ title: "4. 이력서"
 - 물류팀 테크리드 (2022.06.01 ~ 2023.04.30)
 	- 화물 주선사 대상 SaaS 개발 (배차 & 정산)
 - 모빌리티서비스팀 프론트엔드 리드 (2022.05.02 ~ 2022.05.31)
-- React Native, TypeScript, Next.js, Spring Boot, Terraform
+- Spring Boot, Terraform, Next.js, React Native, TypeScript
 
 #### 기여한 기술력
 
