--- a/content/notes/4-이력서.md
+++ b/content/notes/4-이력서.md
@@ -52,6 +52,7 @@ title: "4. 이력서"
 - Next.js v13의 [App Router](https://nextjs.org/docs/app)로 웹 애플리케이션을 작성하면서 필요한 라이브러리를 직접 구현
 	- [return-fetch :: A simple and powerful high order function to extend fetch](https://return-fetch.myeongjae.kim/)
 	- [Next.js v13 App Router로 제품 만들기: 이제 더 이상 Axios를 쓰지 않기로 했습니다](https://myeongjae.kim/blog/2023/08/04/next-js-app-router-and-fetch-library)
+- React Native로 디어 앱, Next.js로 웹뷰 기능 구현
 
 ##### 물류팀 테크리드 (2022.06.01 ~ 2023.04.30)
 
@@ -89,7 +90,7 @@ title: "4. 이력서"
 
 - 만화경 백엔드/프론트엔드/추천시스템 개발
 	- 만화경 팀의 두 번째 개발자로 입사
-- Spring Boot, Spring Data JPA, Spring Web MVC, Spring WebFlux, Spirng Data R2DBC, Spring OAuth2, TypeScript, React, Next.js, Redux, Redux Saga, lerna
+- Spring Boot, Spring Data JPA, Spring Web MVC, Spring WebFlux, Spring Data R2DBC, Spring OAuth2, TypeScript, React, Next.js, Redux, Redux Saga, lerna
 
 #### 기여한 기술력
 
